--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Div-ine-Coders</title>
+    <link
+      rel="icon"
+      href="/img/favicon.svg"
+    />
   </head>
   <body>
     <div id="root" >
